# MainStream

./: CMakeLists.txt  README.md  main.cpp  run.sh
config/: global_config.json  peripheral_config.json
include/: AINode.h  ThreadPool.hpp  WKTParser.h  base64.h  frame_concate.h  postprocess.h  preprocess.h  rk3588_node.h  rkYolvo5s.hpp  rknnPool.hpp
src/: WKTParser.cpp  base64.cpp  frame_concate.cpp  postprocess.cpp  preprocess.cpp  rk3588_node.cpp  rkYolov5s.cpp
